--- a/src/assets/variables.sass
+++ b/src/assets/variables.sass
@@ -8,7 +8,7 @@ $color-wrong: #E16162
 $overlay-dark: #0f001e
 
 $filter-dark: invert(10%) sepia(20%) saturate(2418%) hue-rotate(134deg) brightness(95%) contrast(104%)
-$filter-primary: invert(22%) sepia(29%) saturate(1293%) hue-rotate(129deg) brightness(91%) contrast(101%)
+$filter-primary: #b9abd1
 $filter-secondary: invert(85%) sepia(8%) saturate(678%) hue-rotate(112deg) brightness(98%) contrast(82%)
 $filter-grey: invert(91%) sepia(9%) saturate(53%) hue-rotate(277deg) brightness(103%) contrast(88%)
 $filter-white: invert(100%) sepia(78%) saturate(573%) hue-rotate(301deg) brightness(112%) contrast(105%)
