--- a/src/assets/variables.sass
+++ b/src/assets/variables.sass
@@ -1,6 +1,6 @@
 $color-dark: #0f001e
 $color-primary: #220046
-$color-secondary: #b9abd1
+$color-secondary: #bfb4d3
 $color-grey: #E8E4E6
 $color-white: #FFFFFE
 $color-highlight: #f97c60
